--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "dist",
     "src"
   ],
+  "unpkg": "dist/index.min.js",
+  "cdn": "dist/index.min.js",
+  "jsdelivr": "dist/index.min.js",
+  "module": "dist/index.esm.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist && NODE_ENV=production rollup -c",
     "test": "npm run lint && npm run jest",
     "test:cov": "npm run lint && npm run jest:cov",
     "lint": "eslint 'src/**/*.ts'",
@@ -21,6 +28,8 @@
   "author": "zcong1993",
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.5",
     "@types/uuid": "^8.0.0",
@@ -33,6 +42,9 @@
     "jest": "^26.0.1",
     "lint-staged": "^10.2.6",
     "prettier": "^2.0.5",
+    "rollup": "^2.10.9",
+    "rollup-plugin-dts": "^1.4.7",
+    "rollup-plugin-esbuild": "^1.4.1",
     "ts-jest": "^26.0.0",
     "typescript": "^3.9.3"
   },
