--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.5",
-    "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.0.1",
     "@typescript-eslint/parser": "^3.0.1",
     "eslint": "^7.1.0",
@@ -75,7 +74,6 @@
     }
   },
   "dependencies": {
-    "browser-process-hrtime": "^1.0.0",
-    "uuid": "^8.1.0"
+    "browser-process-hrtime": "^1.0.0"
   }
 }
