--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "my cool project",
   "main": "./dist/index.js",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "unpkg": "dist/index.browser.min.js",
   "cdn": "dist/index.browser.min.js",
