--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test:cov": "npm run lint && npm run jest:cov",
     "lint": "eslint 'src/**/*.ts'",
     "format": "prettier --write '**/*.{ts,json,md}'",
-    "jest": "jest --detectOpenHandles --forceExit",
-    "jest:cov": "jest --coverage --detectOpenHandles --forceExit",
+    "jest": "jest --forceExit",
+    "jest:cov": "jest --coverage --forceExit",
     "prepublishOnly": "npm run build"
   },
   "types": "./dist/index.d.ts",
