--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "format": "prettier --write '**/*.{ts,json,md}'",
     "jest": "jest --forceExit",
     "jest:cov": "jest --coverage --forceExit",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "release": "shipjs prepare"
   },
   "types": "./dist/index.d.ts",
   "author": "zcong1993",
@@ -44,6 +45,7 @@
     "rollup": "^2.10.9",
     "rollup-plugin-dts": "^1.4.7",
     "rollup-plugin-esbuild": "^2.0.0",
+    "shipjs": "0.20.1",
     "ts-jest": "^26.0.0",
     "typescript": "^3.9.3"
   },
