--- a/package.json
+++ b/package.json
@@ -31,23 +31,24 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "@types/jest": "^26.0.0",
-    "@types/node": "^14.0.5",
-    "@typescript-eslint/eslint-plugin": "^3.0.1",
-    "@typescript-eslint/parser": "^3.0.1",
-    "eslint": "^7.1.0",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "esbuild": "^0.6.25",
+    "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.0",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.2.6",
+    "jest": "^26.4.0",
+    "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
-    "rollup": "^2.10.9",
-    "rollup-plugin-dts": "^1.4.7",
-    "rollup-plugin-esbuild": "^2.0.0",
+    "rollup": "^2.26.3",
+    "rollup-plugin-dts": "^1.4.10",
+    "rollup-plugin-esbuild": "^2.4.2",
     "shipjs": "0.20.1",
-    "ts-jest": "^26.0.0",
-    "typescript": "^3.9.3"
+    "ts-jest": "^26.2.0",
+    "typescript": "^3.9.7"
   },
   "jest": {
     "testEnvironment": "node",
